修改项目结构